# AutoML-Miner

./: .gitignore  AutoML Miner.spec  GUI_README.md  README.md  automl_miner.iss  gui_app_modern.py  gui_app_pyside.py  main.py  pip-dump  pyproject.toml  requirements.txt  run-miner.py  setup.py  test_gui.py
automl_client/: client.py  evaluation_strategy.py  evolution_engine.py  keyfile.py  stop_flag.py  wallet.py
automl_client/components/: __init__.py  base.py  factory.py
automl_client/components/activation/: __init__.py  library.py  strategy.py
automl_client/components/loss/: __init__.py  library.py  strategy.py
automl_client/components/optimizer/: __init__.py  library.py  strategy.py
automl_client/components/regularization/: __init__.py  library.py  strategy.py
automl_client/core/: config.py
automl_client/data/: __init__.py  dataset_factory.py  test_dataset_factory.py
automl_client/genetic/: __init__.py  function_converter.py  genetic_operators.py  interpreter.py  operators.py  serialize.py  strategies.py
automl_client/genetic/tests/: test_convergence.py  test_genetic_interpreter.py  test_genetic_operators.py  test_integration.py  test_scaling.py
automl_client/gui/: __init__.py  main_window.py  theme.py
automl_client/gui/components/: __init__.py  hex_logo.py  log_manager.py
automl_client/gui/screens/: __init__.py  (+5 more)
automl_client/models/: model_factory.py  test_model_factory.py
automl_client/tasks/: README.md  __init__.py  classification.py  regression.py  strategy.py
automl_client/utils/: __init__.py  fec.py  json.py  resource_path.py
(+9 files in other folders)
